{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 27,
  "lineage": "e89b321d-33ac-3dfc-cb2a-00e9a65bdad4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d646164cbe70da51",
            "arn": "arn:aws:ec2:us-east-2:842199272939:elastic-ip/eipalloc-0d646164cbe70da51",
            "domain": "vpc",
            "id": "eipalloc-0d646164cbe70da51",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-136-58-126.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.58.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-nat-gateway-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:internet-gateway/igw-06520f16508c25e83",
            "id": "igw-06520f16508c25e83",
            "owner_id": "842199272939",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-igw"
            },
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:842199272939:loadbalancer/app/particle41-devops-challenge-alb/0f51db1d5c2aec69",
            "arn_suffix": "app/particle41-devops-challenge-alb/0f51db1d5c2aec69",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "particle41-devops-challenge-alb-868760926.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:842199272939:loadbalancer/app/particle41-devops-challenge-alb/0f51db1d5c2aec69",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "particle41-devops-challenge-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ec41b9469ef68e9f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d4d0cd20c960166"
              },
              {
                "subnet_id": "subnet-0a88c45ca17bf1c94"
              }
            ],
            "subnets": [
              "subnet-01d4d0cd20c960166",
              "subnet-0a88c45ca17bf1c94"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-alb"
            },
            "vpc_id": "vpc-0baef337ff2e82990",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:842199272939:listener/app/particle41-devops-challenge-alb/0f51db1d5c2aec69/18291e4d5b91b27b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:842199272939:targetgroup/particle41-devops-challenge-tg/5c4bda63b4be30d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:842199272939:listener/app/particle41-devops-challenge-alb/0f51db1d5c2aec69/18291e4d5b91b27b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:842199272939:loadbalancer/app/particle41-devops-challenge-alb/0f51db1d5c2aec69",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-http-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:842199272939:targetgroup/particle41-devops-challenge-tg/5c4bda63b4be30d1",
            "arn_suffix": "targetgroup/particle41-devops-challenge-tg/5c4bda63b4be30d1",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:842199272939:targetgroup/particle41-devops-challenge-tg/5c4bda63b4be30d1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "particle41-devops-challenge-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d646164cbe70da51",
            "association_id": "eipassoc-05723b1d338844149",
            "connectivity_type": "public",
            "id": "nat-01821a47564a5077a",
            "network_interface_id": "eni-013a75a8057a90b16",
            "private_ip": "10.0.1.85",
            "public_ip": "3.136.58.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d4d0cd20c960166",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:route-table/rtb-0948c0bbea5126313",
            "id": "rtb-0948c0bbea5126313",
            "owner_id": "842199272939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01821a47564a5077a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:route-table/rtb-036e0ab3ca8676260",
            "id": "rtb-036e0ab3ca8676260",
            "owner_id": "842199272939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06520f16508c25e83",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0951783803b440b2e",
            "route_table_id": "rtb-0948c0bbea5126313",
            "subnet_id": "subnet-05e0f10da6c6772ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcaf7624e638a6df",
            "route_table_id": "rtb-0948c0bbea5126313",
            "subnet_id": "subnet-05909af080937550d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05577db95cb545b0d",
            "route_table_id": "rtb-036e0ab3ca8676260",
            "subnet_id": "subnet-01d4d0cd20c960166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca37a7268a59b973",
            "route_table_id": "rtb-036e0ab3ca8676260",
            "subnet_id": "subnet-0a88c45ca17bf1c94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:security-group/sg-0ec41b9469ef68e9f",
            "description": "Allow HTTP/HTTPS inbound traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec41b9469ef68e9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "particle41-devops-challenge-alb-sg",
            "name_prefix": "",
            "owner_id": "842199272939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:security-group/sg-098c9ee432d757fe4",
            "description": "Allow inbound traffic from ALB to ECS tasks on app port and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c9ee432d757fe4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec41b9469ef68e9f"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "particle41-devops-challenge-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "842199272939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:subnet/subnet-05e0f10da6c6772ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e0f10da6c6772ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842199272939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-subnet-1"
            },
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:subnet/subnet-05909af080937550d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05909af080937550d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842199272939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-private-subnet-2"
            },
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:subnet/subnet-01d4d0cd20c960166",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d4d0cd20c960166",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842199272939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:subnet/subnet-0a88c45ca17bf1c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88c45ca17bf1c94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842199272939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-0baef337ff2e82990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842199272939:vpc/vpc-0baef337ff2e82990",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013557d6f1277f5ef",
            "default_route_table_id": "rtb-07377828216137f4e",
            "default_security_group_id": "sg-0be4c3a04cec3aafe",
            "dhcp_options_id": "dopt-02a9263256e449a1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0baef337ff2e82990",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07377828216137f4e",
            "owner_id": "842199272939",
            "tags": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "particle41-devops-challenge-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}